src/test/deca/context/valid/provided/nombres_amicaux.deca
{
    int x = 220; // Modifiez cette valeur pour tester
    int y = 284; // Modifiez cette valeur pour tester

    int sumX = 0, sumY = 0;

    for (int i = 1; i <= x / 2; i++) {
        if (x % i == 0) {
            sumX += i;
        }
    }

    for (int j = 1; j <= y / 2; j++) {
        if (y % j == 0) {
            sumY += j;
        }
    }

    if (sumX == y && sumY == x) {
        println(x + " et " + y + " sont des nombres amicaux.");
    } else {
        println(x + " et " + y + " ne sont pas des nombres amicaux.");
    }
}
